# woldvirtual3d

./: Plan_Reparacion_Codigo.md  README.md  WoldVirtualv01.ADMIN.BT.sln  bspeincipal.tscn  bsprincipal.tscn  erroresdeconsola.md  project.godot
.godot/: extension_list.cfg  global_script_class_cache.cfg
.godot/editor/: AvatarMJ_body_3d.tscn-editstate-ccc933ee6e63d53c4fa2473d2f3b287d.cfg  AvatarMJ_body_3d.tscn-folding-7caf76c5cfd71e575a9b7d0bf9e963ce.cfg  AvatarMJ_body_3d.tscn-folding-ccc933ee6e63d53c4fa2473d2f3b287d.cfg  MetaverseHUD.tscn-editstate-09d128024a1fd55d3a1b78743477a04e.cfg  MetaverseHUD.tscn-folding-09d128024a1fd55d3a1b78743477a04e.cfg  NDBSrprc_3d.tscn-editstate-2aa48d9eda1217cd03ea89d641e934d1.cfg  Terrain3DParticles.tscn-editstate-560a94ec058cd5b2ac41012d7040356c.cfg  Terrain3DParticles.tscn-folding-560a94ec058cd5b2ac41012d7040356c.cfg  create_recent.Node  editor_layout.cfg  (+26 more)
GDSCRIP/: IslandManager.gd  IslandManager.gd.uid  movimientoAV3d.gd  movimientoAV3d.gd.uid
ND3D/: NDBSrprc_3d.tscn
ND3DEXE/C++/: CMakeLists.txt  README.md  database_manager.cpp  database_manager.h  p2p_network.cpp  p2p_network.h  register_types.cpp  register_types.h  woldvirtual3d.gdextension  woldvirtual3d.gdextension.uid
NDEXE/: LanzarVisor.bat  Program.cs  README.md  README_Viewer.md  Viewer3D.cs  WoldVirtual3D.Viewer.csproj  build_viewer.ps1
SHADER/: AGUAanimada_shader.gdshader  AGUAanimada_shader.gdshader.uid
UI_HUD/: MetaverseHUD.tscn  README.md
docs/: KNOWN_WARNINGS.md
escenas/: terrainUS1_3d.tscn  terrainUS1_assets.tres
user3D/: avBS1_body_3d.tscn  rprc_3d.tscn
(+138 files in other folders)
